# zeitig

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.hooks/: pre-commit
src/zeitig/: __init__.py  aggregates.py  events.py  iface.py  reporting.py  scripts.py  sourcing.py  store.py
src/zeitig/templates/: console
tests/: test_aggregates.py  test_events.py  test_scripts.py  test_sourcing.py
tests/data/: 2018-04-01T08:00:00+00:00  2018-04-01T09:00:00+00:00  2018-04-01T10:00:00+00:00  2018-04-01T11:00:00+00:00  2018-04-01T12:00:00+00:00  2018-04-01T13:00:00+00:00  2018-04-01T14:00:00+00:00
